--- a/pom.xml
+++ b/pom.xml
@@ -13,21 +13,11 @@
     <targetJdk>${java.version}</targetJdk>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <repositories>
-    <repository>
-      <id>jai-imageio</id>
-      <name>Java Advanced Imaging for ImageIO</name>
-      <url>http://maven.geotoolkit.org</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-  </repositories>
   <dependencies>
       <dependency>
-		<groupId>javax.media</groupId>
-		<artifactId>jai_imageio</artifactId>
-		<version>1.1</version>
+        <groupId>com.github.jai-imageio</groupId>
+        <artifactId>jai-imageio-core</artifactId>
+        <version>1.3.0</version>
 	  </dependency>
       <dependency>
 	    <groupId>org.slf4j</groupId>
